@@ -1,3 +1,11 @@
+2022-03-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCast.c,
+	  support/regression/tests/bug-3372.c:
+	  Fix bug #3372.
+	* src/SDCCsymt.c:
+	  Improve debug output for bit-fields.
+
 2022-03-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/as8xcxxx/ds8adr.c,
